--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
           </tr> -->
           </tbody>
         </table>
-        <div class="container"><span class="total">Hello</span></div>
+        <div class="container"><span class="total">0</span></div>
         <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          
         </div>
       </div>
     </div>
