--- a/index.html
+++ b/index.html
@@ -79,15 +79,12 @@
               </tr>
             </thead>
             <tbody id="expense-list">
-              <!-- <tr>
-            <th scope="row">1</th>
-            <td>24/11/2021</td>
-            <td>Shopping</td>
-            <td>7000</td>
-          </tr> -->
+          <tr>
+            <th scope="row" colspan="3">Total</th>
+            <td><span class="total">0</span></td>
+          </tr>
             </tbody>
           </table>
-          <div class="container">Total Ksh<span class="total">0</span></div>
           <div class="card-body"></div>
         </div>
       </div>
