--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Expenses tracker</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="container">
         <div class="card m-auto mt-5">
           <div class="card-header card-title text-center">
@@ -26,9 +26,9 @@
           </div>
           <div class="card-body">
             <div class="card-text">
-              <form action="">
+              <form >
                 <div class="container">
-                  <div class="row">
+                  <div class="row gy-2">
                     <div class="col-lg-3 col-sm-12">
                       <input
                         type="date"
@@ -69,23 +69,24 @@
               </form>
             </div>
           </div>
-          <table class="table table-striped">
-            <thead>
-              <tr class="">
-                <th scope="col">#</th>
-                <th class="" scope="col">Date</th>
-                <th class="" scope="col">Description</th>
-                <th scope="col">Amount</th>
-              </tr>
-            </thead>
-            <tbody id="expense-list">
-          <tr>
-            <th scope="row" colspan="3">Total</th>
-            <td><span class="total">0</span></td>
-          </tr>
-            </tbody>
-          </table>
-          <div class="card-body"></div>
+          <div class="container">
+            <table class="table table-striped">
+              <thead>
+                <tr class="">
+                  <th scope="col">#</th>
+                  <th class="" scope="col">Date</th>
+                  <th class="" scope="col">Description</th>
+                  <th scope="col">Amount</th>
+                </tr>
+              </thead>
+              <tbody id="expense-list">
+                <tr>
+                  <th scope="row" colspan="3">Total</th>
+                  <td><span class="total">0</span></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
