add README and LICENSE

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         class="form-control"
                         name="date"
                         id=""
+                        required
                       />
                     </div>
                     <div class="col-lg-5 col-sm-12">
@@ -44,6 +45,7 @@
                         name="description"
                         id=""
                         placeholder="Description"
+                        required
                       />
                     </div>
                     <div class="col-lg-2 col-sm-12">
@@ -53,6 +55,7 @@
                         name="amount"
                         id=""
                         placeholder="Ksh"
+                        required
                       />
                     </div>
                     <div class="col-lg-2 col-sm-12">
@@ -62,6 +65,7 @@
                         value="Add"
                         name=""
                         id=""
+                      
                       />
                     </div>
                   </div>
