add form labels and copyright footer

--- a/index.html
+++ b/index.html
@@ -30,30 +30,33 @@
                 <div class="container">
                   <div class="row gy-2">
                     <div class="col-lg-3 col-sm-12">
+                      <label for="date" class="form-label">Date</label>
                       <input
                         type="date"
                         class="form-control"
                         name="date"
-                        id=""
+                        id="date"
                         required
                       />
                     </div>
                     <div class="col-lg-5 col-sm-12">
+                      <label for="description" class="form-label">Description</label>
                       <input
                         type="text"
                         class="form-control"
                         name="description"
-                        id=""
+                        id="description"
                         placeholder="Description"
                         required
                       />
                     </div>
                     <div class="col-lg-2 col-sm-12">
+                      <label for="Amount" class="form-label">Amount</label>
                       <input
                         type="number"
                         class="form-control"
                         name="amount"
-                        id=""
+                        id="amount"
                         placeholder="Ksh"
                         required
                       />
@@ -90,6 +93,9 @@
                 </tr>
               </tbody>
             </table>
+          </div>
+          <div class="card-footer">
+            <p class="text-center">&copy;2021 Francis Githae</p>
           </div>
         </div>
       </div>
