--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <div class="card-body">
             <div class="card-text">
-              <form >
+              <form>
                 <div class="container">
                   <div class="row gy-2">
                     <div class="col-lg-3 col-sm-12">
@@ -40,7 +40,9 @@
                       />
                     </div>
                     <div class="col-lg-5 col-sm-12">
-                      <label for="description" class="form-label">Description</label>
+                      <label for="description" class="form-label"
+                        >Description</label
+                      >
                       <input
                         type="text"
                         class="form-control"
@@ -61,14 +63,13 @@
                         required
                       />
                     </div>
-                    <div class="col-lg-2 col-sm-12">
+                    <div class="col-lg-2 col-sm-12 d-flex align-items-end">
                       <input
                         type="Submit"
                         class="form-control btn btn-primary"
                         value="Add"
                         name=""
                         id=""
-                      
                       />
                     </div>
                   </div>
